--- a/stundenplan.tex
+++ b/stundenplan.tex
@@ -221,9 +221,9 @@ Do. (12:05--12:45) Analysis
 	\pdfbookmark[2]{Versionshinweise}{versionshinweise}
 	\subsection*{Versionshinweise}
 	\input{files/git/versions-log}
-	\printgitstatlandscape{1}
+	%\printgitstatlandscape{1}
 %  \end{landscape}
-	\printgitstat{1}
+	%\printgitstat{1}
 %	\subsubsection*{Dateien?}
 %	\pdfbookmark[3]{Dateien?}{files_by_date}
 %	\includegraphics[width=14cm]{files/git/stats/files_by_date-crop}
