--- a/stundenplan.tex
+++ b/stundenplan.tex
@@ -1,7 +1,8 @@
-%% <Schule/Schulischer-Kurztext.tex> Vorlageversion 1.1.1 <Robin Schneider>
-%%%Präambel
+%% <school/Schulischer-Kurztext.tex> template 1.1.1 by Robin `ypid` Schneider <ypid23@aol.de>
+%% The current version can be found on: https://github.com/ypid/typesetting/blob/master/templates/school/Schulischer-Kurztext.tex
+%%% preamble
 %\RequirePackage{snapshot}		%% \jobname.dep
-%\listfiles	%% listfiles in die Logdatei
+%\listfiles %% listfiles to logfile
 \RequirePackage{RequirePackageRS}
 \documentclass[12pt,landscape,a4paper,ngerman,numbers=noenddot,toc=listof]{scrartcl}	%% ,draft
 \usepackage{
@@ -21,7 +22,7 @@
 	schoolRS,
 %	chemistryRS,
 }
-%% Spetzifische angaben
+%% specific indications
 %\setboolean{licenseNameDate}{false}
 \readgitstat{7}
 \SetTITEL{Stundenplan}
@@ -42,7 +43,7 @@
 }
 \SetDraft{on}
 \input{files/hacks}
-%%%Body
+%%% body
 \begin{document}
 \setcounter{headpages}{0}\pagenumbering{arabic}
 %%%%%%%%%%%
